--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -2,12 +2,317 @@
 @import url('http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css');
 
 
+body{
+    display: block;
+}
+
+div{
+    margin: 0 auto;
+    text-align: center;
+}
+
 h1 {
   font-size: 2.2rem;
   color: lighten($orange, 25);
 }
 
-.test {
-  font-size: 1.2rem;
-  color: $blue;
+
+#start {
+    height: 600px;
+}
+
+#food {
+    background-color: $foodBackGround;
+    @include padding-top-bottom(100px);
+}
+
+#play {
+    @extend #food;
+    background-color: $playBackGround;
+}
+
+#Lollipop{
+    @extend #food;
+    background-color: $lollipopBackGround ;
+}
+
+
+
+.header{
+    position: fixed;
+    width: 100%;
+    background-color: $headBackGround;
+    line-height: 70px;
+    z-index: 2;
+
+    div{
+        vertical-align:middle;
+        display: inline;
+    }
+
+    .title{
+        margin-left: 5%;
+        margin-right: 40%;
+    }
+
+    h1{
+        font-size: 2rem;
+        display: inline;
+    }
+
+    p{
+        margin-left: 1%;
+        margin-right: 1%;
+        font-size: 1.5rem;
+        display: inline;
+    }
+}
+
+
+
+
+
+.modalDialog {
+	position: fixed;
+	font-family: Arial, Helvetica, sans-serif;
+	top: 0;
+	bottom: 0;
+	background: rgba(0,0,0,0.8);
+	z-index: 99999;
+	opacity:0;
+	transition: opacity 400ms ease-in;
+	pointer-events: none;
+
+    .modalBoard{
+        width: 50%;
+        position: relative;
+        margin: 5% auto;
+        padding: 5px 20px 13px 20px;
+        border-radius: 10px;
+        background: #fff;
+    }
+
+    .close {
+        background: #606061;
+        color: #FFFFFF;
+        line-height: 25px;
+        position: absolute;
+        right: -12px;
+        text-align: center;
+        top: -10px;
+        width: 24px;
+        text-decoration: none;
+        font-weight: bold;
+        border-radius: 12px;
+        box-shadow: 1px 1px 3px #000;
+    }
+
+    .close:hover { background: #00d9ff; }
+
+
+    .modal-column{
+        display: table;
+        width: 100%;
+        table-layout: fixed;
+        border-spacing: 10px;
+
+        .modalRow{
+            display: table-row;
+
+            div{
+                display: table-cell;
+                height: 200px;
+
+                img{
+                    @include same-width-height(100%);
+                }
+            }
+        }
+    }
+}
+
+.modalDialog:target {
+	opacity:1;
+	pointer-events: auto;
+}
+
+
+
+#carousel {
+    margin-top: 30px;
+    width:500px;
+    border:1px solid #ccc;
+
+    h1{
+        font-weight: bold;
+        font-size: 20px;
+    }
+
+    #buttons {
+        @include padding-top-bottom(10px);
+
+        a {
+            display:inline;
+            color: #ef7e60;
+            margin-left: 10px;
+            margin-right: 10px;
+            @include same-width-height(32px);
+        }
+    }
+
+    #slides {
+        overflow:hidden;
+        position:relative;
+        @include same-width-height(250px);
+        margin-top: 5px;
+        margin-bottom: 30px;
+
+        ul {
+            position:relative;
+            list-style:none;
+            width:750px;
+
+            li {
+                @include same-width-height(250px);
+                float:left;
+
+                img {
+                    padding:5px;
+                }
+            }
+        }
+
+    }
+}
+
+
+.vertical2{
+    position: relative;
+    top: 40%;
+    transform: translateY(-50%);
+
+    h1{
+        color: $startWord;
+        font-size: 5rem;
+    }
+
+    a{
+        color: $startWord;
+        font-size: 2rem;
+    }
+
+    .StartDiv1{
+        margin-top: 10px;
+    }
+
+    .StartDiv2{
+        margin-top: 15px;
+
+        i{
+            color: red;
+        }
+    }
+
+    p{
+        font-size: 2rem;
+    }
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.column p{
+    border-radius: 25px;
+    padding: 5px 10px 5px 10px;
+}
+
+.firstInPage{
+    padding-top: 70px;
+}
+
+.fixedBackground{
+    background:url("../media/bgImage.jpg");
+    background-size: 100% 100%;
+    background-attachment:fixed;
+
+}
+
+
+.LollipopPicture{
+    width: 500px;
+
+    img{
+        width: 500px;
+        height: 333px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+}
+
+
+.vertical3 h1{
+    display: inline;
+    font-size: 50px;
+}
+
+.paragraph-align{
+    margin-top: 20px;
+    text-align: left;
+    width: 70%;
+
+    font:serif;
+    font-size: 22px;
+
+    p{
+        margin-bottom: 15px;
+    }
+}
+
+
+.videoArea{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.gif{
+    @include same-width-height(100px);
+}
+
+.animation {
+    @include same-width-height(100px);
+    position: relative;
+    animation-name: example;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes example {
+    0%   { left:-20%; top:0;}
+    100% { left:20%; top:0;}
+}
+
+.mediaIcon{
+    margin-top: 5px;
+
+    a{
+        @include same-width-height(32px);
+    }
+}
+
+
+.footer{
+    background-color: gray;
+}
+
+.footerDiv{
+    @include padding-top-bottom(15px);
 }
