--- a/source_sass/_variables.scss
+++ b/source_sass/_variables.scss
@@ -1,5 +1,12 @@
 $orange         : #BD3613;
 $blue           : #2176C7;
+$headBackGround      : #FFFFFD;
+$foodBackGround      : #FEFFF1;
+$playBackGround      : #F5F5F5;
+$lollipopBackGround  : #FEFFF1;
+
+$startWord      : #3A5FCD;
+
 
 $font-primary: Merriweather, serif;
 $font-secondary: Bree Serif, serif;
